# text2sql-agent-rl

./: .gitignore  README.md  pyproject.toml
assets/: make_figs.py
assets/figdata/: figdata.json
configs/: data.yaml  eval.yaml  eval_mini.yaml  sft.yaml  sft_agentic.yaml  smoke.yaml  smoke_train.yaml  train.yaml
scripts/: compare.py  dump_modules.py  evaluate.py  evaluate_singleturn.py  extract_synsql_subset.py  filter_data.py  prepare_data.py  prepare_sft.py  prepare_sft_agentic.py  sanity.py  serve_vllm.sh  setup_gpu.sh  train_grpo.py  train_sft.py
src/sqlrl/: agent.py  config.py  dataset.py  db.py  ex.py  prompts.py  reward.py  runner.py  schema.py  tools.py  train_env.py  train_reward.py
tests/: conftest.py  mock_client.py  test_agent_mock.py  test_dataset.py  test_db.py  test_ex.py  test_prepare_sft.py  test_reward_r1.py  test_reward_r2.py  test_reward_r3.py  test_runner.py  test_scaffold.py  test_tools.py  test_train_adapters.py
