[project]
name = "sqlrl"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = ["pydantic>=2", "pyyaml", "sqlglot>=23"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
